--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/theme.scss",
+              "src/my-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
