--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,10 @@
 {
   "hosting": {
-    "public": "dist/corona-app",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   }
 }
